--- a/SDL_Pathfinding/SDL_Pathfinding.vcxproj
+++ b/SDL_Pathfinding/SDL_Pathfinding.vcxproj
@@ -21,9 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{48D8AFB0-551E-45CB-8730-E2CF8571445D}</ProjectGuid>
-    <RootNamespace>SDL_Decisions</RootNamespace>
+    <RootNamespace>SDL_Pathfinding</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
-    <ProjectName>SDL_Decisions</ProjectName>
+    <ProjectName>SDL_Pathfinding</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -131,34 +131,46 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Image Include="..\res\soldier.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\src\Agent.h" />
-    <ClInclude Include="..\src\FSMState.h" />
-    <ClInclude Include="..\src\Grid.h" />
-    <ClInclude Include="..\src\Path.h" />
-    <ClInclude Include="..\src\PathFollowing.h" />
-    <ClInclude Include="..\src\Scene.h" />
-    <ClInclude Include="..\src\SceneDecisions.h" />
-    <ClInclude Include="..\src\SDL_SimpleApp.h" />
-    <ClInclude Include="..\src\Seek.h" />
-    <ClInclude Include="..\src\utils.h" />
-    <ClInclude Include="..\src\Vector2D.h" />
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="..\src\Agent.cpp" />
+    <ClCompile Include="..\src\AStar.cpp" />
+    <ClCompile Include="..\src\BFS.cpp" />
+    <ClCompile Include="..\src\Connexion.cpp" />
+    <ClCompile Include="..\src\Dijkstra.cpp" />
+    <ClCompile Include="..\src\GBFS.cpp" />
+    <ClCompile Include="..\src\Graf.cpp" />
     <ClCompile Include="..\src\Grid.cpp" />
     <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="..\src\Node.cpp" />
     <ClCompile Include="..\src\PathFollowing.cpp" />
-    <ClCompile Include="..\src\SceneDecisions.cpp" />
+    <ClCompile Include="..\src\ScenePathFindingMouse.cpp" />
     <ClCompile Include="..\src\SDL_SimpleApp.cpp" />
     <ClCompile Include="..\src\Seek.cpp" />
     <ClCompile Include="..\src\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\src\FSM.cpp" />
-    <Text Include="..\src\FSM.h" />
+    <ClInclude Include="..\src\Agent.h" />
+    <ClInclude Include="..\src\AStar.h" />
+    <ClInclude Include="..\src\BFS.h" />
+    <ClInclude Include="..\src\Connexion.h" />
+    <ClInclude Include="..\src\Dijkstra.h" />
+    <ClInclude Include="..\src\GBFS.h" />
+    <ClInclude Include="..\src\Graf.h" />
+    <ClInclude Include="..\src\Grid.h" />
+    <ClInclude Include="..\src\Node.h" />
+    <ClInclude Include="..\src\Path.h" />
+    <ClInclude Include="..\src\PathFollowing.h" />
+    <ClInclude Include="..\src\ScenePathFindingMouse.h" />
+    <ClInclude Include="..\src\Seek.h" />
+    <ClInclude Include="..\src\utils.h" />
+    <ClInclude Include="..\src\Scene.h" />
+    <ClInclude Include="..\src\SDL_SimpleApp.h" />
+    <ClInclude Include="..\src\Vector2D.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\res\spritesheet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\res\maze.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
