--- a/SDL_Pathfinding/SDL_Pathfinding.vcxproj
+++ b/SDL_Pathfinding/SDL_Pathfinding.vcxproj
@@ -141,8 +141,15 @@
     <ClCompile Include="..\src\AStar.cpp" />
     <ClCompile Include="..\src\BFS.cpp" />
     <ClCompile Include="..\src\Connexion.cpp" />
+    <ClCompile Include="..\src\DecisionMakingAlgorithm.cpp" />
     <ClCompile Include="..\src\Dijkstra.cpp" />
+    <ClCompile Include="..\src\FSM.cpp" />
+    <ClCompile Include="..\src\FSMState.cpp" />
+    <ClCompile Include="..\src\FSMStateChase.cpp" />
+    <ClCompile Include="..\src\FSMStateFlee.cpp" />
+    <ClCompile Include="..\src\FSMStateWander.cpp" />
     <ClCompile Include="..\src\GBFS.cpp" />
+    <ClCompile Include="..\src\GOAP.cpp" />
     <ClCompile Include="..\src\Graf.cpp" />
     <ClCompile Include="..\src\Grid.cpp" />
     <ClCompile Include="..\src\main.cpp" />
@@ -158,8 +165,15 @@
     <ClInclude Include="..\src\AStar.h" />
     <ClInclude Include="..\src\BFS.h" />
     <ClInclude Include="..\src\Connexion.h" />
+    <ClInclude Include="..\src\DecisionMakingAlgorithm.h" />
     <ClInclude Include="..\src\Dijkstra.h" />
+    <ClInclude Include="..\src\FSM.h" />
+    <ClInclude Include="..\src\FSMState.h" />
+    <ClInclude Include="..\src\FSMStateChase.h" />
+    <ClInclude Include="..\src\FSMStateFlee.h" />
+    <ClInclude Include="..\src\FSMStateWander.h" />
     <ClInclude Include="..\src\GBFS.h" />
+    <ClInclude Include="..\src\GOAP.h" />
     <ClInclude Include="..\src\Graf.h" />
     <ClInclude Include="..\src\Grid.h" />
     <ClInclude Include="..\src\Node.h" />
