--- a/SDL_Pathfinding/SDL_Pathfinding.vcxproj.filters
+++ b/SDL_Pathfinding/SDL_Pathfinding.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClCompile Include="..\src\SDL_SimpleApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Wander.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Agent.h">
@@ -163,6 +166,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\SDL_SimpleApp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Wander.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
